# rust-bitbake-cargo-test

./: Cargo.toml  hello_0.1.0.bb
src/: main.rs
