[package]
name = "hello"
version = "0.1.0"
authors = ["Daniel Alksnis <daniel@danielalksnis.com>"]
edition = "2018"
description = "Simple Hello"
homepage = "http://example.com"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
